# test-task-telethon

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: env.py  main.py  pyproject.toml
src/parsers/: models.py  text.py  wild_parser.py
src/tg_api/: tele_api.py
