[tool.poetry]
name = "test-task-telethon"
version = "0.1.0"
description = ""
authors = ["DmitriyDecadenz <dima.hubul@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
telethon = "^1.35.0"
httpx = "^0.27.0"
bs4 = "^0.0.2"
qrcode = "^7.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
